# FreeAPIs

./: LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: update.yml
data/: models.json
providers/gemini/: README.md  README.zh-CN.md
providers/groq/: README.md  README.zh-CN.md
providers/openrouter/: README.md  README.zh-CN.md
src/freeapis/: __init__.py  __main__.py  cli.py  constants.py  http.py  models.py  pipeline.py  render.py  validation.py
src/freeapis/adapters/: __init__.py  base.py  gemini.py  groq.py  openrouter.py
tests/: conftest.py  test_adapters.py  test_http.py  test_pipeline.py  test_render.py  test_validation.py
tests/fixtures/: gemini_pricing.html  groq_model_safety.html  groq_model_text.html  groq_model_transcription.html  groq_model_tts.html  groq_rate_limits.html  openrouter_models.json
